--- a/index.html
+++ b/index.html
@@ -21,12 +21,48 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <i class="aprendiendoando-correo amarillo"></i>
-
-        <img src="img/slider.jpg" alt="">
-
-        <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+        <header class="header">
+            <div class="box">
+                <div class="header__top">
+                    <div class="header__mail">
+                        <i class="aprendiendoando-correo"></i>
+                        <a href="">yan@aprendiendoando.com</a>
+                    </div>
+                    <div class="header__rs">
+                        <ul class="list-none header__rs">
+                            <li><a href=""><i class="aprendiendoando-twitter"></i></a></li>
+                            <li><a href=""><i class="aprendiendoando-facebook"></i></a></li>
+                            <li><a href=""><i class="aprendiendoando-youtube"></i></a></li>
+                            <li><a href=""><i class="aprendiendoando-rss"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="header__bottom">
+                    <div class="logo">
+                        <a href="#">
+                            <img src="img/aprendiendoando.png" alt="AprendiendoAndo">
+                        </a>
+                    </div>
+                    <nav class="nav__main">
+                        <ul class="list-none">
+                            <li><a href="#">Inicio</a></li>
+                            <li><a href="#">Cursos</a></li>
+                            <li><a href="#">Acerca De</a></li>
+                            <li><a href="#">Blog</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </header>
+        <main class="box">
+            <section class="slider">
+                <figure>
+                    <img src="img/startup.jpg" alt="Aprendiendoando Startup">
+                </figure>
+            </section>
+        </main>
+       <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
