Clase # 7 - Estructura header

--- a/index.html
+++ b/index.html
@@ -21,10 +21,38 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <i class="aprendiendoando-correo amarillo"></i>
-
-        <img src="img/slider.jpg" alt="">
+        <header class="header">
+            <div class="box">
+                <div class="header__top">
+                    <div class="header__mail">
+                        <i class="aprendiendoando-correo"></i>
+                        <a href="#">yan@aprendiendoando.com</a>
+                    </div>
+                    <div class="header__rs">
+                        <ul class="list-none">
+                            <a href="#"><i class="aprendiendoando-twitter"></i></a>
+                            <a href="#"><i class="aprendiendoando-facebook"></i></a>
+                            <a href="#"><i class="aprendiendoando-youtube"></i></a>
+                            <a href="#"><i class="aprendiendoando-rss"></i></a>
+                        </ul>
+                    </div>
+                </div>
+                <div class="header__bottom">
+                    <div class="logo">
+                        <a href="#"><img src="img/aprendiendoando.png" alt="Aprendiendoando" width="436" height="72"></a>
+                    </div>
+                    <nav class="nav__main">
+                        <ul class="list-none">
+                            <li><a href="#">Inicio</a></li>
+                            <li><a href="#">Cursos</a></li>
+                            <li><a href="#">Acerca De</a></li>
+                            <li><a href="#">Blog</a></li>
+                            <li><a href="#">Contacto</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </header>
 
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
