Header Top - Estilos

--- a/index.html
+++ b/index.html
@@ -26,28 +26,30 @@
                 <div class="header__top">
                     <div class="header__mail">
                         <i class="aprendiendoando-correo"></i>
-                        <a href="#">yan@aprendiendoando.com</a>
+                        <a class="decoration-none" href="#">yan@aprendiendoando.com</a>
                     </div>
                     <div class="header__rs">
                         <ul class="list-none">
-                            <a href="#"><i class="aprendiendoando-twitter"></i></a>
-                            <a href="#"><i class="aprendiendoando-facebook"></i></a>
-                            <a href="#"><i class="aprendiendoando-youtube"></i></a>
-                            <a href="#"><i class="aprendiendoando-rss"></i></a>
+                            <a class="decoration-none" href="#"><i class="aprendiendoando-twitter"></i></a>
+                            <a class="decoration-none" href="#"><i class="aprendiendoando-facebook"></i></a>
+                            <a class="decoration-none" href="#"><i class="aprendiendoando-youtube"></i></a>
+                            <a class="decoration-none" href="#"><i class="aprendiendoando-rss"></i></a>
                         </ul>
                     </div>
                 </div>
                 <div class="header__bottom">
                     <div class="logo">
-                        <a href="#"><img src="img/aprendiendoando.png" alt="Aprendiendoando" width="436" height="72"></a>
+                        <a href="#">
+                            <img src="img/aprendiendoando.png" alt="Aprendiendoando" width="436" height="72">
+                        </a>
                     </div>
                     <nav class="nav__main">
                         <ul class="list-none">
-                            <li><a href="#">Inicio</a></li>
-                            <li><a href="#">Cursos</a></li>
-                            <li><a href="#">Acerca De</a></li>
-                            <li><a href="#">Blog</a></li>
-                            <li><a href="#">Contacto</a></li>
+                            <li><a class="decoration-none active" href="#">Inicio</a></li>
+                            <li><a class="decoration-none" href="#">Cursos</a></li>
+                            <li><a class="decoration-none" href="#">Acerca De</a></li>
+                            <li><a class="decoration-none" href="#">Blog</a></li>
+                            <li><a class="decoration-none" href="#">Contacto</a></li>
                         </ul>
                     </nav>
                 </div>
