--- a/index.html
+++ b/index.html
@@ -1,80 +1,96 @@
 <!doctype html>
 <html class="no-js" lang="es">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <!-- Place favicon.ico in the root directory -->
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-        <link href="https://fonts.googleapis.com/css?family=Dosis:400,500,600,700|Raleway:300,400,500,500i,800" rel="stylesheet">
-    </head>
-    <body>
-        <!--[if lt IE 8]>
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <!-- Place favicon.ico in the root directory -->
+
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/main.css">
+    <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Dosis:400,500,600,700|Raleway:300,400,500,500i,800" rel="stylesheet">
+</head>
+
+<body>
+    <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <!-- Add your site or application content here -->
-        <header class="header">
-            <div class="box">
-                <div class="header__top">
-                    <div class="header__mail">
-                        <i class="aprendiendoando-correo"></i>
-                        <a href="">yan@aprendiendoando.com</a>
-                    </div>
-                    <div class="header__rs">
-                        <ul class="list-none header__rs">
-                            <li><a href=""><i class="aprendiendoando-twitter"></i></a></li>
-                            <li><a href=""><i class="aprendiendoando-facebook"></i></a></li>
-                            <li><a href=""><i class="aprendiendoando-youtube"></i></a></li>
-                            <li><a href=""><i class="aprendiendoando-rss"></i></a></li>
-                        </ul>
-                    </div>
+    <!-- Add your site or application content here -->
+    <header class="header">
+        <div class="box">
+            <div class="header__top">
+                <div class="header__mail">
+                    <i class="aprendiendoando-correo"></i>
+                    <a class="decoration-none" href="#">yan@aprendiendoando.com</a>
                 </div>
-                <div class="header__bottom">
-                    <div class="logo">
-                        <a href="#">
-                            <img src="img/aprendiendoando.png" alt="AprendiendoAndo">
-                        </a>
-                    </div>
-                    <nav class="nav__main">
-                        <ul class="list-none">
-                            <li><a href="#">Inicio</a></li>
-                            <li><a href="#">Cursos</a></li>
-                            <li><a href="#">Acerca De</a></li>
-                            <li><a href="#">Blog</a></li>
-                            <li><a href="#">Contact</a></li>
-                        </ul>
-                    </nav>
+                <div class="header__rs">
+                    <ul class="list-none">
+                        <a class="decoration-none" href="#"><i class="aprendiendoando-twitter"></i></a>
+                        <a class="decoration-none" href="#"><i class="aprendiendoando-facebook"></i></a>
+                        <a class="decoration-none" href="#"><i class="aprendiendoando-youtube"></i></a>
+                        <a class="decoration-none" href="#"><i class="aprendiendoando-rss"></i></a>
+                    </ul>
                 </div>
             </div>
-        </header>
-        <main class="box">
-            <section class="slider">
-                <figure>
-                    <img src="img/startup.jpg" alt="Aprendiendoando Startup">
-                </figure>
-            </section>
-        </main>
-       <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+            <div class="header__bottom">
+                <div class="logo">
+                    <a href="#">
+                        <img src="img/aprendiendoando.png" alt="Aprendiendoando" width="436" height="72">
+                    </a>
+                </div>
+                <nav class="nav__main">
+                    <ul class="list-none">
+                        <li><a class="decoration-none active" href="#">Inicio</a></li>
+                        <li><a class="decoration-none" href="#">Cursos</a></li>
+                        <li><a class="decoration-none" href="#">Acerca De</a></li>
+                        <li><a class="decoration-none" href="#">Blog</a></li>
+                        <li><a class="decoration-none" href="#">Contacto</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
+    <main class="main">
+        <section class="slider">
+            <div class="overlay"></div>
+            <div class="box slider__information">
+                <div class="slider__left">
+                    <h2 class="title title--big">¿Que Quieres aprender hoy?</h2>
+                    <h4 class="title title--small">Todo esto encontraras en <strong>Aprendiendoando</strong></h4>
+                    <a href="#" class="button button--main">Ver todos los cursos</a>
+                </div>
+                <div class="slider--right">
+                    <img src="img/lenguajes-slider.png" alt="">
+                </div>
+            </div>
+        </section>
+    </main>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='https://www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-        </script>
-    </body>
+    <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+    <script>
+        window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')
+    </script>
+    <script src="js/plugins.js"></script>
+    <script src="js/main.js"></script>
+
+    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+    <script>
+            (function (b, o, i, l, e, r) {
+            b.GoogleAnalyticsObject = l; b[l] || (b[l] =
+                function () { (b[l].q = b[l].q || []).push(arguments) }); b[l].l = +new Date;
+                e = o.createElement(i); r = o.getElementsByTagName(i)[0];
+                e.src = 'https://www.google-analytics.com/analytics.js';
+                r.parentNode.insertBefore(e, r)
+            }(window, document, 'script', 'ga'));
+        ga('create', 'UA-XXXXX-X', 'auto'); ga('send', 'pageview');
+    </script>
+</body>
+
 </html>
