Clase 9 - 10 : Creando la zona del slider

--- a/index.html
+++ b/index.html
@@ -55,6 +55,21 @@
                 </div>
             </div>
         </header>
+        <main class="main">
+            <section class="slider">
+                <div class="overlay"></div>
+                <div class="box slider__information">
+                    <div class="slider__left">
+                        <h2 class="title title--big">¿Que quieres aprender hoy?</h2>
+                        <h4 class="title title--small">Todo esto encontraras en <strong>Aprendiendoando</strong></h4>
+                        <a href="#" class="button button--main">Ver todos los cursos</a>
+                    </div>
+                    <div class="slider__right">
+                        <img src="img/lenguajes-slider.png" alt="AprendiendoAndo" width="400" height="285">
+                    </div>
+                </div>
+            </section>
+        </main>
 
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
