Empezamos la clase 11

--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
             <div class="overlay"></div>
             <div class="box slider__information">
                 <div class="slider__left">
-                    <h2 class="title title--big">¿Que Quieres aprender hoy?</h2>
+                    <h2 class="title title--big">¿Que quieres aprender hoy?</h2>
                     <h4 class="title title--small">Todo esto encontraras en <strong>Aprendiendoando</strong></h4>
                     <a href="#" class="button button--main">Ver todos los cursos</a>
                 </div>
-                <div class="slider--right">
-                    <img src="img/lenguajes-slider.png" alt="">
+                <div class="slider__right">
+                    <img src="img/lenguajes-slider.png" alt="AprendiendoAndo" width="400" height="285">
                 </div>
             </div>
         </section>
