--- a/index.html
+++ b/index.html
@@ -71,6 +71,19 @@
                 </div>
             </div>
         </section>
+        <section class="youtube-analytics">
+            <div class="youtube-analytics__date box">
+                <img src="img/youtube-suscriptores.png" alt="Youtube Aprendiendoando" width="119" height="119">
+                <div class="youtube-analytics__number">
+                    <span>12000</span>
+                    <strong>< Suscriptores /></strong>
+                </div>
+            </div>
+            <p class="youtube-analytics__information">
+                Dan su visto bueno a nuestros cursos, la claridad con que se abordan los temas, y la manera practica de exponer la información.
+                <strong> 120 Cursos, 360 horas, 19 Proyectos </strong> el deseo de enseñar son el complemento perfecto para dar contenido de calidad.
+            </div>
+        </section>
     </main>
 
     <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
