--- a/index.html
+++ b/index.html
@@ -84,6 +84,26 @@
                 <strong> 120 Cursos, 360 horas, 19 Proyectos </strong> el deseo de enseñar son el complemento perfecto para dar contenido de calidad.
             </div>
         </section>
+        <section class="box box__courses">
+            <article class="box__courses--one">
+                <figure>
+                    <img src="img/cursos-populares.png" alt="" width="103" height="118">
+                </figure>
+                <div>
+                    <h4>Cursos <br> Populares</h4>
+                    <p>Los mas visto, y mejor calificados</p>
+                </div>
+            </article>
+            <article class="box__courses--one box__courses--dos">
+                <figure>
+                    <img src="img/lo-mas-reciente.png" alt="" width="103" height="118">
+                </figure>
+                <div>
+                    <h4>Los más <br>Recientes</h4>
+                    <p>Últimos lanzamientos</p>
+                </div>
+            </article>
+        </section>
     </main>
 
     <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
