--- a/index.html
+++ b/index.html
@@ -104,6 +104,152 @@
                 </div>
             </article>
         </section>
+        <section class="box list-courses">
+            <article class="list-courses__item">
+                <figure class="list-courses__image sin-margin">
+                    <a href="#">
+                        <img class="img-responsive" src="img/item-courses.jpg" alt="Bootstrap 3" width="640" height="420">
+                    </a>
+                    <figcaption class="price price--free">Gratis</figcaption>
+                </figure>
+                <div class="list-courses__information">
+                    <a href="#" class="decoration-none"><h3 class="sin-margin">Bootstrap, Lo mejor del mundo Parte 1</h3></a>
+                    <p>Conoce el maravilloso framework que ha revolucionado la manera de trabajar para web</p>
+                </div>
+                <footer class="list-courses__author">
+                    <figure class="sin-margin">
+                        <a href="#" class="decoration-none">
+                            <img class="img-responsive" src="img/yan-arlex-vallejo.jpg" alt="Yan Arlex Vallejo" width="100" height="100">
+                            <figcaption>Yan Vallejo</figcaption>
+                        </a>
+                    </figure>
+                    <div>
+                        <a href="#" class="decoration-none">Diseño Web</a>
+                        <span>11 Videos 3 Horas</span>
+                    </div>
+                </footer>
+            </article>
+            <article class="list-courses__item">
+                <figure class="list-courses__image sin-margin">
+                    <a href="#">
+                        <img class="img-responsive" src="img/item-courses.jpg" alt="Bootstrap 3" width="640" height="420">
+                    </a>
+                    <figcaption class="price price--free">Gratis</figcaption>
+                </figure>
+                <div class="list-courses__information">
+                    <a href="#" class="decoration-none"><h3 class="sin-margin">Bootstrap, Lo mejor del mundo Parte 1</h3></a>
+                    <p>Conoce el maravilloso framework que ha revolucionado la manera de trabajar para web</p>
+                </div>
+                <footer class="list-courses__author">
+                    <figure class="sin-margin">
+                        <a href="#" class="decoration-none">
+                            <img class="img-responsive" src="img/yan-arlex-vallejo.jpg" alt="Yan Arlex Vallejo" width="100" height="100">
+                            <figcaption>Yan Vallejo</figcaption>
+                        </a>
+                    </figure>
+                    <div>
+                        <a href="#" class="decoration-none">Diseño Web</a>
+                        <span>11 Videos 3 Horas</span>
+                    </div>
+                </footer>
+            </article>
+            <article class="list-courses__item">
+                <figure class="list-courses__image sin-margin">
+                    <a href="#">
+                        <img class="img-responsive" src="img/item-courses.jpg" alt="Bootstrap 3" width="640" height="420">
+                    </a>
+                    <figcaption class="price price--premiun">Premium - $ 10</figcaption>
+                </figure>
+                <div class="list-courses__information">
+                    <a href="#" class="decoration-none"><h3 class="sin-margin">Bootstrap, Lo mejor del mundo Parte 1</h3></a>
+                    <p>Conoce el maravilloso framework que ha revolucionado la manera de trabajar para web</p>
+                </div>
+                <footer class="list-courses__author">
+                    <figure class="sin-margin">
+                        <a href="#" class="decoration-none">
+                            <img class="img-responsive" src="img/yan-arlex-vallejo.jpg" alt="Yan Arlex Vallejo" width="100" height="100">
+                            <figcaption>Yan Vallejo</figcaption>
+                        </a>
+                    </figure>
+                    <div>
+                        <a href="#" class="decoration-none">Diseño Web</a>
+                        <span>11 Videos 3 Horas</span>
+                    </div>
+                </footer>
+            </article>
+            <article class="list-courses__item">
+                <figure class="list-courses__image sin-margin">
+                    <a href="#">
+                        <img class="img-responsive" src="img/item-courses.jpg" alt="Bootstrap 3" width="640" height="420">
+                    </a>
+                    <figcaption class="price price--free">Gratis</figcaption>
+                </figure>
+                <div class="list-courses__information">
+                    <a href="#" class="decoration-none"><h3 class="sin-margin">Bootstrap, Lo mejor del mundo Parte 1</h3></a>
+                    <p>Conoce el maravilloso framework que ha revolucionado la manera de trabajar para web</p>
+                </div>
+                <footer class="list-courses__author">
+                    <figure class="sin-margin">
+                        <a href="#" class="decoration-none">
+                            <img class="img-responsive" src="img/yan-arlex-vallejo.jpg" alt="Yan Arlex Vallejo" width="100" height="100">
+                            <figcaption>Yan Vallejo</figcaption>
+                        </a>
+                    </figure>
+                    <div>
+                        <a href="#" class="decoration-none">Diseño Web</a>
+                        <span>11 Videos 3 Horas</span>
+                    </div>
+                </footer>
+            </article>
+            <article class="list-courses__item">
+                <figure class="list-courses__image sin-margin">
+                    <a href="#">
+                        <img class="img-responsive" src="img/item-courses.jpg" alt="Bootstrap 3" width="640" height="420">
+                    </a>
+                    <figcaption class="price price--free">Gratis</figcaption>
+                </figure>
+                <div class="list-courses__information">
+                    <a href="#" class="decoration-none"><h3 class="sin-margin">Bootstrap, Lo mejor del mundo Parte 1</h3></a>
+                    <p>Conoce el maravilloso framework que ha revolucionado la manera de trabajar para web</p>
+                </div>
+                <footer class="list-courses__author">
+                    <figure class="sin-margin">
+                        <a href="#" class="decoration-none">
+                            <img class="img-responsive" src="img/yan-arlex-vallejo.jpg" alt="Yan Arlex Vallejo" width="100" height="100">
+                            <figcaption>Yan Vallejo</figcaption>
+                        </a>
+                    </figure>
+                    <div>
+                        <a href="#" class="decoration-none">Diseño Web</a>
+                        <span>11 Videos 3 Horas</span>
+                    </div>
+                </footer>
+            </article>
+            <article class="list-courses__item">
+                <figure class="list-courses__image sin-margin">
+                    <a href="#">
+                        <img class="img-responsive" src="img/item-courses.jpg" alt="Bootstrap 3" width="640" height="420">
+                    </a>
+                    <figcaption class="price price--premiun">Premium - $ 10</figcaption>
+                </figure>
+                <div class="list-courses__information">
+                    <a href="#" class="decoration-none"><h3 class="sin-margin">Bootstrap, Lo mejor del mundo Parte 1</h3></a>
+                    <p>Conoce el maravilloso framework que ha revolucionado la manera de trabajar para web</p>
+                </div>
+                <footer class="list-courses__author">
+                    <figure class="sin-margin">
+                        <a href="#" class="decoration-none">
+                            <img class="img-responsive" src="img/yan-arlex-vallejo.jpg" alt="Yan Arlex Vallejo" width="100" height="100">
+                            <figcaption>Yan Vallejo</figcaption>
+                        </a>
+                    </figure>
+                    <div>
+                        <a href="#" class="decoration-none">Diseño Web</a>
+                        <span>11 Videos 3 Horas</span>
+                    </div>
+                </footer>
+            </article>
+        </section>
     </main>
 
     <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
